Update to 10x10 blocksize for much simpler and faster neural network. Some much needed code cleanup! Subtle performance increases